# booking_system

./: README.md
backend/: package.json
backend/src/: index.ts
backend/src/api/: index.ts
backend/src/api/v1/: index.ts
backend/src/api/v1/devices/: index.ts
frontend/: .gitignore  CMakeLists.txt  gen_ui.sh
frontend/src/: index.cpp
frontend/src/view/: MainWindow.hpp
frontend/src/view_xml/: MainWindow.ui
